base/surveys/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-surveys
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-surveys
  template:
    metadata:
      labels:
        app: ms-surveys
    spec:
      imagePullSecrets:
      - name: oci-registry
      containers:
        - name: ms-surveys
          image: iad.ocir.io/idwwmbyiyhww/meta-ms-surveys:latest
          ports:
            - containerPort: 3000
              protocol: TCP
