base/surveys/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: surveys
  namespace: meta-ms

spec:
  entryPoints:
    - web

  routes:
  - match: Host(`surveys.cmstg.metaformers.com`) && PathPrefix(`/`)
    kind: Rule
    services:
    - name: ms-surveys
      port: 3000
